<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.jbellis</groupId>
        <artifactId>jvector-parent</artifactId>
        <version>dev</version>
    </parent>
    <artifactId>jvector-twenty</artifactId>
    <version>${jvector.version}</version>
    <name>Twenty</name>
    <build>
        <testSourceDirectory>../jvector-base/src/test</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>20</release>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <skip>false</skip>
                    <argLine>
                        --add-modules=jdk.incubator.vector
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>sift</id>
                        <configuration>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>--add-modules=jdk.incubator.vector</argument>
                                <argument>-ea</argument>
                                <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bench</id>
                        <configuration>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>--add-modules=jdk.incubator.vector</argument>
                                <argument>-Xmx32G</argument>
                                <argument>-ea</argument>
                                <argument>com.github.jbellis.jvector.example.Bench</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>deep100</id>
                        <configuration>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>--add-modules=jdk.incubator.vector</argument>
                                <argument>-Xmx256G</argument>
                                <argument>-ea</argument>
                                <argument>com.github.jbellis.jvector.example.Deep100MWriter</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.jbellis</groupId>
            <artifactId>jvector-base</artifactId>
            <version>${jvector.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
